<?xml version="1.0" encoding="utf-8"?>
<!--
    Course: MAD9132 - Android Application Development
    App: RGB-A Tool
    @author Thomas Wiegand (wieg0002)
-->
<resources>

    <string name="app_name">RGB-A Tool</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">Thomas Wiegand (wieg0002)</string>
	<string name="alpha">Transparency (Alpha)</string>
	<string name="black">Black</string>
	<string name="blue">Blue</string>
	<string name="cyan">Cyan</string>
	<string name="green">Green</string>
	<string name="magenta">Magenta</string>
	<string name="red">Red</string>
	<string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="current_colour">Current Colour</string>
	
</resources>
